<resources>
    <string name="app_name">ProyectoPDM2024-GT2-Grupo1-Tema</string>
    <string name="tercera_dosis">Seleccione la hora de la tercera dosis</string>
    <string name="app_intervalosemanas">Ingrese el intervalo de semanas de su dosis</string>
    <string name="app_appMedicamento">Recordatorios de medicamentos MediReminder</string>
    <string name="app_appDosisHora">Seleccione la hora de la dosis</string>
    <string name="app_intervalosemana">Intervalo semanas</string>
    <string name="app_instrucciones">Instrucciones</string>

    <!--Para vista de seleccion de la hora de la dosis-->
    <string name="hora_dosis">Seleccione la hora de la dosis</string>
    <string name="btnBack">Boton de regreso</string>
    <string name="btnNext">Boton para la siguiente vista</string>
    <string name="seleccionar">Seleccionar</string>

    <!--Para la vista de instrucciones del medicamento -->
    <string name="instruccion">Instrucciones del medicamento</string>
    <string name="antes_comer">Antes de comer</string>
    <string name="durante_comida">Durante la comida</string>
    <string name="despues_comer">Después de comer</string>
    <string name="al_despertar">Al despertarse</string>
    <string name="antes_dormir">Antes de dormir</string>
    <string name="ninguno">Ninguno</string>
    <string name="instruccion_extra">¿Tiene alguna instrucción extra?</string>

    <!--Para la presentación de recordatorios -->
    <string name="presentar_recordatorio">Seleccione la manera de presentar el recordatorio</string>
    <string name="alarma_visual">Alarma visual</string>
    <string name="alarma_sonora">Alarma sonora</string>
    <string name="alarma_vibrante">Alarma vibrante</string>

    <!--Para vista de alarma visual -->
    <string name="vista_alarma_visual">Se visualizará de la siguiente manera</string>
    <string name="ingerir_medicamento">Ingerir: </string>

    <!--Txt de vista para ingresar sintomas secundarios-->
    <string name="sintomas">Se visualizará unos minutos después</string>
    <string name="presento_sintoma"> ¿Presento algún sintoma secundario al ingerir?</string>
    <string name="editText_sintoma"> No presente ningún sintoma</string>
    <string name="guardar"> Guardar </string>

    <!--String para las VISTAS 16 a 21-->
    <string name="app_ingresarmedicamento">Ingrese el medicamento</string>
    <string name="app_nombremedicamento">Medicamento</string>
    <string name="app_formatomedicamento">Seleccione el formato del medicamento</string>
    <string name="app_selectItemformato">Formato Item</string>
    <string name="app_frecuenciamedicamento">Seleccione la frecuencia administrada</string>
    <string name="app_seleccionardias">Días de recordatorio</string>
    <string name="app_selectedDays">Selected Days</string>
    <string-array name="elegir_dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string name="app_dosisadministrada">Dosis administrada</string>
    <string name="app_selectItemdosis">Cantidad dosis</string>
    <string name="app_intervalodias">Ingrese el intervalo de días de su dosis</string>
    <string name="app_selectItemdias">Intervalo días</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
