<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".hora_dosis">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/degradado" >
        <TextView
            android:id="@+id/textView"
            android:layout_width="226dp"
            android:layout_height="55dp"
            android:text="@string/instruccion"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.831"
            tools:ignore="TextSizeCheck" />

        <!--Agregar el icono, al momento de agregarlo como las veces anteriores, no encuentra -->
        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="62dp"
            android:layout_height="58dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/medicina"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="84dp"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3c5177">

        <!-- Opciones de instrucciones -->

        <!-- Texto para instrucciones extra -->

        <TextView
            android:id="@+id/btn_antes_de_comer"
            android:layout_width="410dp"
            android:layout_height="57dp"
            android:layout_marginBottom="9dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/antes_comer"
            android:textColor="@android:color/white"

            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_durante_la_comida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.781" />

        <TextView
            android:id="@+id/btn_durante_la_comida"
            android:layout_width="410dp"
            android:layout_height="59dp"
            android:layout_marginBottom="76dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/durante_comida"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_al_despertarse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.989" />

        <TextView
            android:id="@+id/btn_despues_de_comer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/despues_comer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_al_despertarse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_durante_la_comida" />

        <TextView
            android:id="@+id/btn_al_despertarse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/al_despertar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_antes_de_dormir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.969" />

        <TextView
            android:id="@+id/btn_antes_de_dormir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/antes_dormir"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_ninguno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/btn_ninguno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/ninguno"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.691" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="265dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/instruccion_extra"
            android:textColor="#7E7C7C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ninguno"
            app:layout_constraintVertical_bias="0.41" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>