<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".alarmaVisual">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="#3c5177">

        <!--Agregar el icono, al momento de agregarlo como las veces anteriores, no encuentra -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="295dp"
            android:layout_height="52dp"
            android:text="@string/vista_alarma_visual"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.487"
            tools:ignore="TextSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="62dp"
            android:layout_height="58dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            tools:src="@mipmap/BtnBack" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/degradado">

        <!-- Opciones de instrucciones -->

        <!-- Texto para instrucciones extra -->

        <TextView
            android:id="@+id/paraMedicamento"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="?attr/selectableItemBackground"

            android:gravity="center"
            android:padding="16dp"
            android:text="@string/txtViewmedicamento"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231" />

        <TextView
            android:id="@+id/btn_antes_de_comer"
            android:layout_width="414dp"
            android:layout_height="73dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/ingerir_medicamento"
            android:textColor="@android:color/white"

            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="87dp"
            android:layout_height="79dp"
            android:layout_marginTop="184dp"
            android:contentDescription="@string/seleccionar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paraMedicamento"
            app:layout_constraintVertical_bias="0.39"
            app:srcCompat="@mipmap/btndenegado" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="84dp"
            android:layout_height="75dp"
            android:layout_marginTop="184dp"
            android:contentDescription="@string/alarma_vibrante"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.573"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/paraMedicamento"
            app:layout_constraintVertical_bias="0.403"
            app:srcCompat="@mipmap/btnaprobado" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="#3c5177">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/alarma_sonora"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/btnnext" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>