<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".hora_dosis">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/degradado">


        <TextView
            android:id="@+id/textView"
            android:layout_width="226dp"
            android:layout_height="55dp"
            android:text="@string/hora_dosis"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.831"
            tools:ignore="TextSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="62dp"
            android:layout_height="58dp"
            android:background="?android:attr/windowSplashScreenIconBackgroundColor"
            android:contentDescription="@string/btnBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173"
            app:srcCompat="@mipmap/BtnBack"
            tools:targetApi="s" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/medicina"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="84dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3c5177">

        <TextView
            android:id="@+id/time"
            android:layout_width="244dp"
            android:layout_height="68dp"
            android:text="Hora : Minutos"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.384" />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#223E69"
            android:text="@string/seleccionar"
            android:textColorLink="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintVertical_bias="0.499" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.896"
            app:srcCompat="@mipmap/btnnext"
            android:background="?android:attr/windowSplashScreenIconBackgroundColor"
            android:contentDescription="@string/btnNext"
            tools:targetApi="s" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>